Aditional Products added

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
               />
             </div>
             <div class="productTitle">
-              <h4>Para Chloro Meta Xylenol</h4>
+              <h4>4 Chloro Meta Xylenol</h4>
               <h5>CAS No. 88-04-0</h5>
             </div>
           </div>
@@ -378,13 +378,13 @@
           >
             <div class="imageContainer">
               <img
-                src="./images/Parachloro-meta-cresol.jpg"
+                src="./images/Parachloro-meta-cresol.png"
                 alt="Norway"
                 class="image"
               />
             </div>
             <div class="productTitle">
-              <h4>Para Chloro Meta Cresol</h4>
+              <h4>4 Chloro Meta Cresol</h4>
               <h5>CAS No. 59-50-7</h5>
             </div>
           </div>
@@ -436,7 +436,7 @@
                 src="./images/4-methoxy-phenacyl-bromide.png"
                 alt="Norway"
                 class="image"
-                style="width:350px;height:200px"
+                style="width:300px;height:160px;padding-top:20px;padding-bottom:20px;"
               />
             </div>
             <div class="productTitle">
@@ -444,23 +444,23 @@
               <h5>CAS No. 2632-13-5</h5>
             </div>
           </div>
-
           <div
           class="productCard"
-          onclick="window.open('screens/product/1-Hydroxyadamentanol.html', '_blank');"
+          onclick="window.open('screens/product/cyclopentane-carboxylic-acid.html', '_blank');"
         >
           <div class="imageContainer">
             <img
-              src="./images/1-Hydroxyadamentanol.jpg"
+              src="./images/cyclopentane-carboxylic-acid.jpg"
               alt="Norway"
               class="image"
             />
           </div>
           <div class="productTitle">
-            <h4>1-Hydroxyadamentanol</h4>
-            <h5>CAS No. 768-95-6</h5>
+            <h4>Cyclopentane Carboxylic Acid</h4>
+            <h5>CAS No. 3400-45-1</h5>
           </div>
         </div>
+
         </div>
         <div class="productListRow">
           <div
@@ -498,26 +498,6 @@
               <h5>CAS No. 935-56-8</h5>
             </div>
           </div>
-
-          <div
-          class="productCard"
-          onclick="window.open('screens/product/cyclopentane-carboxylic-acid.html', '_blank');"
-        >
-          <div class="imageContainer">
-            <img
-              src="./images/cyclopentane-carboxylic-acid.jpg"
-              alt="Norway"
-              class="image"
-            />
-          </div>
-          <div class="productTitle">
-            <h4>Cyclopentane Carboxylic Acid</h4>
-            <h5>CAS No. 3400-45-1</h5>
-          </div>
-        </div>
-        </div>
-
-        <div class="productListRow">
           <div
             class="productCard"
             onclick="window.open('screens/product/1-Adamantanol.html', '_blank');"
@@ -537,6 +517,26 @@
           </div>
 
         </div>
+
+        <!-- <div class="productListRow">
+
+          <div
+          class="productCard"
+          onclick="window.open('screens/product/1-Hydroxyadamentanol.html', '_blank');"
+        >
+          <div class="imageContainer">
+            <img
+              src="./images/1-Hydroxyadamentanol.jpg"
+              alt="Norway"
+              class="image"
+            />
+          </div>
+          <div class="productTitle">
+            <h4>1-Hydroxyadamentanol</h4>
+            <h5>CAS No. 768-95-6</h5>
+          </div>
+        </div>
+        </div> -->
 
 
         <div class="disclaimerContainer">
