--- a/screens/product/Tetrahydropyran.html
+++ b/screens/product/Tetrahydropyran.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Cyclopentanol</title>
+    <title>Tetrahydropyran</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -66,16 +66,16 @@
     <div class="mainContainer">
       <div class="content">
         <div class="papers">
-            <h1>Cyclopentanol</h1>
+            <h1>Tetrahydropyran</h1>
           <h2>Identitiers</h2>
           <table>
             <tr>
               <td class="title">CAS number</td>
-              <td class="desc">96-41-3</td>
+              <td class="desc">142-68-7</td>
             </tr>
             <tr>
               <td class="title">Appearance</td>
-              <td class="desc">clear, colourless liquid</td>
+              <td class="desc">--</td>
             </tr>
           </table>
 
@@ -83,35 +83,35 @@
           <table>
             <tr>
               <td class="title">Molecular formula</td>
-              <td class="desc">C5H10O</td>
+              <td class="desc">--</td>
             </tr>
             <tr>
               <td class="title">Molar mass</td>
               <td class="desc">
-                86.13g/mol
+                --g/mol
               </td>
             </tr>
             <tr>
               <td class="title">Density</td>
               <td class="desc">
-                  0.949g/ml
+                --g/ml
               </td>
             </tr>
             <tr>
               <td class="title">Boiling point</td>
-              <td class="desc">139 ~ 140&#8451;</td>
+              <td class="desc">--&#8451;</td>
             </tr>
             <tr>
               <td class="title">Flash Point</td>
-              <td class="desc">51&#8451;</td>
+              <td class="desc">--&#8451;</td>
             </tr>
             <tr>
               <td class="title">Purity</td>
-              <td class="desc">99.0% min</td>
+              <td class="desc">--</td>
             </tr>
             <tr>
               <td class="title">Moisture</td>
-              <td class="desc">0.3% max</td>
+              <td class="desc">--</td>
             </tr>
           </table>
         </div>
@@ -120,7 +120,7 @@
         <div class="widgetStyle">
           <iframe
             class="pubchem-widget"
-            src="https://pubchem.ncbi.nlm.nih.gov/compound/7298#section=3D-Conformer&embed=true&hide_title=true"
+            src="https://pubchem.ncbi.nlm.nih.gov/compound/8894#section=3D-Conformer&embed=true&hide_title=true"
           ></iframe>
         </div>
       </div>
