--- a/screens/product/Parachloro-meta-xylenol.html
+++ b/screens/product/Parachloro-meta-xylenol.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Para Chloro Meta Xylenol</title>
+    <title>4 Chloro Meta Xylenol</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -66,7 +66,7 @@
     <div class="mainContainer">
       <div class="content">
         <div class="papers">
-            <h1>Para Chloro Meta Xylenol</h1>
+            <h1>4 Chloro Meta Xylenol</h1>
           <h2>Identitiers</h2>
           <table>
             <tr>
