--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
               />
             </div>
             <div class="productTitle">
-              <h4>4 Chloro Meta Xylenol</h4>
+              <h4>Para Chloro Meta Xylenol</h4>
               <h5>CAS No. 88-04-0</h5>
             </div>
           </div>
