--- a/screens/product/Parachloro-meta-xylenol.html
+++ b/screens/product/Parachloro-meta-xylenol.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>4 Chloro Meta Xylenol</title>
+    <title>Para Chloro Meta Xylenol</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
