--- a/screens/product/Parachloro-meta-xylenol.html
+++ b/screens/product/Parachloro-meta-xylenol.html
@@ -66,7 +66,7 @@
     <div class="mainContainer">
       <div class="content">
         <div class="papers">
-            <h1>4 Chloro Meta Xylenol</h1>
+            <h1>Para Chloro Meta Xylenol</h1>
           <h2>Identitiers</h2>
           <table>
             <tr>
