Diethyl Ketone resize

--- a/index.html
+++ b/index.html
@@ -324,9 +324,10 @@
           >
             <div class="imageContainer">
               <img
-                src="./images/diethylKetone.jpg"
+                src="./images/diethylKetone.png"
                 alt="Norway"
                 class="image"
+                style="width:240px;height:100px;margin:50px"
               />
             </div>
             <div class="productTitle">
