4 phenyl 1 butanol flip

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
               <img
                 src="./images/4Phynel1Butanol.jpg"
                 alt="Norway"
-                class="image"
+                class="imageFlipX"
                 style="width:200px;height:200px"
               />
             </div>
@@ -761,6 +761,13 @@
     height: 200px;
   -webkit-transform: scaleY(-1) scaleX(-1);
   transform: scaleY(-1) scaleX(-1); 
+  }
+
+  .imageFlipX{
+    width: 200px;
+    height: 200px;
+  -webkit-transform:scaleX(-1);
+  transform:scaleX(-1); 
   }
 
   /* #@#@#@#@##@#@#@#@##@#@#@#@##@#@#@#@##@#@#@#@##@#@#@#@##@#@#@#@##@#@#@#@# */
