--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
               />
             </div>
             <div class="productTitle">
-              <h4>4-Phnyel-1-Butanol</h4>
+              <h4>4-Phenyl-1-Butanol</h4>
               <h5>CAS No. 3360-41-6</h5>
             </div>
           </div>
