--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
               <img
                 src="./images/Methyl-4-phenyl-butyrate.jpg"
                 alt="Norway"
-                class="image"
+                class="imageFlipX"
                 style="width:255px;height:200px"
               />
             </div>
