--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
         <div class="headerOptions">
           <a href="../index.html">Home</a>
           <a href="../index.html#productList">Products</a>
-          <a href="../screens/about.html">About</a>
+          <a href="../about.html">About</a>
           <a href="contact.html">Contact</a>
         </div>
       </div>
@@ -53,7 +53,7 @@
          
         <a href="../index.html">Home</a>
         <a href="../index.html#productList">Products</a>
-        <a href="../screens/about.html">About</a>
+        <a href="../about.html">About</a>
         <a href="contact.html">Contact</a>
 
       </div>
