--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
         <div class="headerOptions">
           <a href="../index.html">Home</a>
           <a href="../index.html#productList">Products</a>
-          <a href="../screens/about.html">About</a>
+          <a href="../about.html">About</a>
           <a href="contact.html">Contact</a>
         </div>
       </div>
@@ -66,7 +66,7 @@
 
       <a href="../index.html">Home</a>
       <a href="../index.html#productList">Products</a>
-      <a href="../screens/about.html">About</a>
+      <a href="../about.html">About</a>
       <a href="contact.html">Contact</a>
     </div>
 
