--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         <div class="headerOptions">
           <a href="index.html">Home</a>
           <a href="index.html#productList">Products</a>
-          <a href="./screens/about.html">About</a>
-          <a href="./screens/contact.html">Contact</a>
+          <a href="./about.html">About</a>
+          <a href="./contact.html">Contact</a>
         </div>
       </div>
     </div>
@@ -74,8 +74,8 @@
 
       <a href="index.html">Home</a>
       <a href="index.html#productListHook" onclick="closeNav()">Products</a>
-      <a href="./screens/about.html">About</a>
-      <a href="./screens/contact.html">Contact</a>
+      <a href="./about.html">About</a>
+      <a href="./contact.html">Contact</a>
     </div>
 
     <div class="container">
@@ -123,7 +123,7 @@
           <div class="productListRow">
             <div
               class="productCard"
-              onclick="window.open('screens/product/cyclopentanone.html', '_blank');"
+              onclick="window.open('product/cyclopentanone.html', '_blank');"
               target="_blank"
               style="cursor:pointer;"
             >
@@ -141,7 +141,7 @@
             </div>
 
             <div class="productCard"
-            onclick="window.open('screens/product/cyclopentanol.html',
+            onclick="window.open('product/cyclopentanol.html',
             '_blank');"">
             <div class="imageContainer">
               <img
@@ -158,7 +158,7 @@
 
           <div
             class="productCard"
-            onclick="window.open('screens/product/cyclopentylBromide.html', '_blank');"
+            onclick="window.open('product/cyclopentylBromide.html', '_blank');"
           >
             <div class="imageContainer">
               <img
@@ -177,7 +177,7 @@
         <div class="productListRow">
           <div
             class="productCard"
-            onclick="window.open('screens/product/cyclopentylChloride.html', '_blank');"
+            onclick="window.open('product/cyclopentylChloride.html', '_blank');"
           >
             <div class="imageContainer">
               <img
@@ -194,7 +194,7 @@
 
           <div
             class="productCard"
-            onclick="window.open('screens/product/cyclopentylAmine.html', '_blank');"
+            onclick="window.open('product/cyclopentylAmine.html', '_blank');"
           >
             <div class="imageContainer">
               <img
@@ -211,7 +211,7 @@
 
           <div
             class="productCard"
-            onclick="window.open('screens/product/alphaTetralone.html', '_blank');"
+            onclick="window.open('product/alphaTetralone.html', '_blank');"
           >
             <div class="imageContainer">
               <img
@@ -230,7 +230,7 @@
         <div class="productListRow">
           <div
             class="productCard"
-            onclick="window.open('screens/product/1-5Dibromopentane.html', '_blank');"
+            onclick="window.open('product/1-5Dibromopentane.html', '_blank');"
           >
             <div class="imageContainer">
               <img
@@ -247,7 +247,7 @@
 
           <!-- <div
             class="productCard"
-            onclick="window.open('screens/product/Bromo5Chloropentane.html', '_blank');"
+            onclick="window.open('product/Bromo5Chloropentane.html', '_blank');"
           >
             <div class="imageContainer">
               <img
@@ -264,7 +264,7 @@
 
           <div
           class="productCard"
-          onclick="window.open('screens/product/alpha-tetralol.html', '_blank');"
+          onclick="window.open('product/alpha-tetralol.html', '_blank');"
         >
           <div class="imageContainer">
             <img
@@ -282,7 +282,7 @@
 
           <div
             class="productCard"
-            onclick="window.open('screens/product/4Phenyl1Butanol.html', '_blank');"
+            onclick="window.open('product/4Phenyl1Butanol.html', '_blank');"
           >
             <div class="imageContainer">
               <img
@@ -302,7 +302,7 @@
         <div class="productListRow">
           <div
             class="productCard"
-            onclick="window.open('screens/product/Methyl-4-phenyl-butyrate.html', '_blank');"
+            onclick="window.open('product/Methyl-4-phenyl-butyrate.html', '_blank');"
           >
             <div class="imageContainer">
               <img
@@ -320,7 +320,7 @@
 
           <div
             class="productCard"
-            onclick="window.open('screens/product/diethylKetone.html', '_blank');"
+            onclick="window.open('product/diethylKetone.html', '_blank');"
           >
             <div class="imageContainer">
               <img
@@ -338,7 +338,7 @@
 
           <div
           class="productCard"
-          onclick="window.open('screens/product/Tetrahydropyran.html', '_blank');"
+          onclick="window.open('product/Tetrahydropyran.html', '_blank');"
         >
           <div class="imageContainer">
             <img
@@ -357,7 +357,7 @@
         <div class="productListRow">
           <div
             class="productCard"
-            onclick="window.open('screens/product/Parachloro-meta-xylenol.html', '_blank');"
+            onclick="window.open('product/Parachloro-meta-xylenol.html', '_blank');"
           >
             <div class="imageContainer">
               <img
@@ -375,7 +375,7 @@
 
           <div
             class="productCard"
-            onclick="window.open('screens/product/Parachloro-meta-cresol.html', '_blank');"
+            onclick="window.open('product/Parachloro-meta-cresol.html', '_blank');"
           >
             <div class="imageContainer">
               <img
@@ -392,7 +392,7 @@
 
           <div
           class="productCard"
-          onclick="window.open('screens/product/Ortho-Phthalaldehyde.html', '_blank');"
+          onclick="window.open('product/Ortho-Phthalaldehyde.html', '_blank');"
         >
           <div class="imageContainer">
             <img
@@ -412,7 +412,7 @@
         <div class="productListRow">
           <div
             class="productCard"
-            onclick="window.open('screens/product/4-Bromoanisole.html', '_blank');"
+            onclick="window.open('product/4-Bromoanisole.html', '_blank');"
           >
             <div class="imageContainer">
               <img
@@ -430,7 +430,7 @@
 
           <div
             class="productCard"
-            onclick="window.open('screens/product/4-methoxy-phenacyl-bromide.html', '_blank');"
+            onclick="window.open('product/4-methoxy-phenacyl-bromide.html', '_blank');"
           >
             <div class="imageContainer">
               <img
@@ -447,7 +447,7 @@
           </div>
           <div
           class="productCard"
-          onclick="window.open('screens/product/cyclopentane-carboxylic-acid.html', '_blank');"
+          onclick="window.open('product/cyclopentane-carboxylic-acid.html', '_blank');"
         >
           <div class="imageContainer">
             <img
@@ -466,7 +466,7 @@
         <div class="productListRow">
           <div
             class="productCard"
-            onclick="window.open('screens/product/1-Bromoadamantane.html', '_blank');"
+            onclick="window.open('product/1-Bromoadamantane.html', '_blank');"
           >
             <div class="imageContainer">
               <img
@@ -484,7 +484,7 @@
 
           <div
             class="productCard"
-            onclick="window.open('screens/product/1-Chloroadamantane.html', '_blank');"
+            onclick="window.open('product/1-Chloroadamantane.html', '_blank');"
           >
             <div class="imageContainer">
               <img
@@ -501,7 +501,7 @@
           </div>
           <div
             class="productCard"
-            onclick="window.open('screens/product/1-Adamantanol.html', '_blank');"
+            onclick="window.open('product/1-Adamantanol.html', '_blank');"
           >
             <div class="imageContainer">
               <img
@@ -523,7 +523,7 @@
 
           <div
           class="productCard"
-          onclick="window.open('screens/product/1-Hydroxyadamentanol.html', '_blank');"
+          onclick="window.open('product/1-Hydroxyadamentanol.html', '_blank');"
         >
           <div class="imageContainer">
             <img
