--- a/about.html
+++ b/about.html
@@ -38,8 +38,8 @@
           <!-- <a href="../index.html">Home</a> -->
           <a href="./index.html">Home</a>
           <a href="./index.html#productList">Products</a>
-          <a href="../about.html">About</a>
-          <a href="contact.html">Contact</a>
+          <a href="#">About</a>
+          <a href="./contact.html">Contact</a>
         </div>
       </div>
     </div>
