--- a/contact.html
+++ b/contact.html
@@ -43,8 +43,8 @@
         <div class="headerOptions">
           <a href="../index.html">Home</a>
           <a href="../index.html#productList">Products</a>
-          <a href="../about.html">About</a>
-          <a href="contact.html">Contact</a>
+          <a href="./about.html">About</a>
+          <a href="#">Contact</a>
         </div>
       </div>
     </div>
