contact page; home + products links modified

--- a/contact.html
+++ b/contact.html
@@ -41,8 +41,8 @@
         <h1><a href="../index.html">Freesia</a></h1>
 
         <div class="headerOptions">
-          <a href="../index.html">Home</a>
-          <a href="../index.html#productList">Products</a>
+          <a href="./index.html">Home</a>
+          <a href="./index.html#productList">Products</a>
           <a href="./about.html">About</a>
           <a href="#">Contact</a>
         </div>
