hover + 100vw on disclaimer

--- a/contact.html
+++ b/contact.html
@@ -92,7 +92,7 @@
             method="POST"
             id="enquiryForm"
             name="enquiryForm"
-            action="https://script.google.com/macros/s/AKfycbwO_6v87zWmrLaoDzyr4MFeaRWC6l52LY-0BV9CgQ/exec"
+            action="https://script.google.com/macros/s//exec"
             data-email="freesia.chemicals37@gmail.com"
           >
             <h2 class="enquiry">Submit Enquiry</h2>
@@ -248,7 +248,7 @@
     <script
       async
       defer
-      src="https://maps.googleapis.com/maps/api/js?key="
+      src="https://maps.googleapis.com/maps/api/js?
     ></script>
 
     <script>
