--- a/index.html
+++ b/index.html
@@ -121,28 +121,27 @@
           <h2>Product List</h2>
 
           <div class="productListRow">
-            <div
-              class="productCard"
-              onclick="window.open('product/cyclopentanone.html', '_blank');"
-              target="_blank"
-              style="cursor:pointer;"
-            >
-              <div class="imageContainer">
-                <img
-                  src="./images/cyclopentanone.jpg"
-                  alt="Norway"
-                  class="image"
-                />
+              <div
+                class="productCard"
+                onclick="window.open('product/cyclopentanone.html', '_blank');"
+                onMouseOver="this.style.backgroundColor='#30E3AF'" onMouseOut="this.style.backgroundColor='#42d1d8'"
+              >
+                <div class="imageContainer">
+                  <img
+                    src="./images/cyclopentanone.jpg"
+                    alt="Norway"
+                    class="image"
+                  />
+                </div>
+                <div class="productTitle">
+                  <h4>Cyclopentanone</h4>
+                  <h5>CAS No. 120-92-3</h5>
+                </div>
               </div>
-              <div class="productTitle">
-                <h4>Cyclopentanone</h4>
-                <h5>CAS No. 120-92-3</h5>
-              </div>
-            </div>
 
             <div class="productCard"
-            onclick="window.open('product/cyclopentanol.html',
-            '_blank');"">
+            onclick="window.open('product/cyclopentanol.html', '_blank');"
+             onMouseOver="this.style.backgroundColor='#30E3AF'" onMouseOut="this.style.backgroundColor='#42d1d8'"">
             <div class="imageContainer">
               <img
                 src="./images/cyclopentanol.jpg"
@@ -159,6 +158,7 @@
           <div
             class="productCard"
             onclick="window.open('product/cyclopentylBromide.html', '_blank');"
+             onMouseOver="this.style.backgroundColor='#30E3AF'" onMouseOut="this.style.backgroundColor='#42d1d8'"
           >
             <div class="imageContainer">
               <img
@@ -178,6 +178,7 @@
           <div
             class="productCard"
             onclick="window.open('product/cyclopentylChloride.html', '_blank');"
+             onMouseOver="this.style.backgroundColor='#30E3AF'" onMouseOut="this.style.backgroundColor='#42d1d8'"
           >
             <div class="imageContainer">
               <img
@@ -195,6 +196,7 @@
           <div
             class="productCard"
             onclick="window.open('product/cyclopentylAmine.html', '_blank');"
+             onMouseOver="this.style.backgroundColor='#30E3AF'" onMouseOut="this.style.backgroundColor='#42d1d8'"
           >
             <div class="imageContainer">
               <img
@@ -212,6 +214,7 @@
           <div
             class="productCard"
             onclick="window.open('product/alphaTetralone.html', '_blank');"
+             onMouseOver="this.style.backgroundColor='#30E3AF'" onMouseOut="this.style.backgroundColor='#42d1d8'"
           >
             <div class="imageContainer">
               <img
@@ -231,6 +234,7 @@
           <div
             class="productCard"
             onclick="window.open('product/1-5Dibromopentane.html', '_blank');"
+             onMouseOver="this.style.backgroundColor='#30E3AF'" onMouseOut="this.style.backgroundColor='#42d1d8'"
           >
             <div class="imageContainer">
               <img
@@ -248,6 +252,7 @@
           <!-- <div
             class="productCard"
             onclick="window.open('product/Bromo5Chloropentane.html', '_blank');"
+             onMouseOver="this.style.backgroundColor='#30E3AF'" onMouseOut="this.style.backgroundColor='#42d1d8'"
           >
             <div class="imageContainer">
               <img
@@ -263,26 +268,27 @@
           </div> -->
 
           <div
-          class="productCard"
-          onclick="window.open('product/alpha-tetralol.html', '_blank');"
-        >
-          <div class="imageContainer">
-            <img
-              src="./images/alpha-tetralol.jpg"
-              alt="Norway"
-              class="image"
-            />
+            class="productCard"
+            onclick="window.open('product/alpha-tetralol.html', '_blank');"
+             onMouseOver="this.style.backgroundColor='#30E3AF'" onMouseOut="this.style.backgroundColor='#42d1d8'"
+          >
+            <div class="imageContainer">
+              <img
+                src="./images/alpha-tetralol.jpg"
+                alt="Norway"
+                class="image"
+              />
+            </div>
+            <div class="productTitle">
+              <h4>Alpha Tetralol</h4>
+              <h5>CAS No. 529-33-9</h5>
+            </div>
           </div>
-          <div class="productTitle">
-            <h4>Alpha Tetralol</h4>
-            <h5>CAS No. 529-33-9</h5>
-          </div>
-        </div>
-
 
           <div
             class="productCard"
             onclick="window.open('product/4Phenyl1Butanol.html', '_blank');"
+             onMouseOver="this.style.backgroundColor='#30E3AF'" onMouseOut="this.style.backgroundColor='#42d1d8'"
           >
             <div class="imageContainer">
               <img
@@ -303,6 +309,7 @@
           <div
             class="productCard"
             onclick="window.open('product/Methyl-4-phenyl-butyrate.html', '_blank');"
+             onMouseOver="this.style.backgroundColor='#30E3AF'" onMouseOut="this.style.backgroundColor='#42d1d8'"
           >
             <div class="imageContainer">
               <img
@@ -321,6 +328,7 @@
           <div
             class="productCard"
             onclick="window.open('product/diethylKetone.html', '_blank');"
+             onMouseOver="this.style.backgroundColor='#30E3AF'" onMouseOut="this.style.backgroundColor='#42d1d8'"
           >
             <div class="imageContainer">
               <img
@@ -337,27 +345,29 @@
           </div>
 
           <div
-          class="productCard"
-          onclick="window.open('product/Tetrahydropyran.html', '_blank');"
-        >
-          <div class="imageContainer">
-            <img
-              src="./images/Tetrahydropyran.jpg"
-              alt="Norway"
-              class="image"
-            />
+            class="productCard"
+            onclick="window.open('product/Tetrahydropyran.html', '_blank');"
+             onMouseOver="this.style.backgroundColor='#30E3AF'" onMouseOut="this.style.backgroundColor='#42d1d8'"
+          >
+            <div class="imageContainer">
+              <img
+                src="./images/Tetrahydropyran.jpg"
+                alt="Norway"
+                class="image"
+              />
+            </div>
+            <div class="productTitle">
+              <h4>Tetrahydropyran</h4>
+              <h5>CAS No. 142-68-7</h5>
+            </div>
           </div>
-          <div class="productTitle">
-            <h4>Tetrahydropyran</h4>
-            <h5>CAS No. 142-68-7</h5>
-          </div>
-        </div>
         </div>
 
         <div class="productListRow">
           <div
             class="productCard"
             onclick="window.open('product/Parachloro-meta-xylenol.html', '_blank');"
+             onMouseOver="this.style.backgroundColor='#30E3AF'" onMouseOut="this.style.backgroundColor='#42d1d8'"
           >
             <div class="imageContainer">
               <img
@@ -376,6 +386,7 @@
           <div
             class="productCard"
             onclick="window.open('product/Parachloro-meta-cresol.html', '_blank');"
+             onMouseOver="this.style.backgroundColor='#30E3AF'" onMouseOut="this.style.backgroundColor='#42d1d8'"
           >
             <div class="imageContainer">
               <img
@@ -391,28 +402,30 @@
           </div>
 
           <div
-          class="productCard"
-          onclick="window.open('product/Ortho-Phthalaldehyde.html', '_blank');"
-        >
-          <div class="imageContainer">
-            <img
-              src="./images/Ortho-Phthalaldehyde.png"
-              alt="Norway"
-              class="image"
-              style="width:165px;height:200px"
-            />
+            class="productCard"
+            onclick="window.open('product/Ortho-Phthalaldehyde.html', '_blank');"
+             onMouseOver="this.style.backgroundColor='#30E3AF'" onMouseOut="this.style.backgroundColor='#42d1d8'"
+          >
+            <div class="imageContainer">
+              <img
+                src="./images/Ortho-Phthalaldehyde.png"
+                alt="Norway"
+                class="image"
+                style="width:165px;height:200px"
+              />
+            </div>
+            <div class="productTitle">
+              <h4>Ortho Phthalaldehyde</h4>
+              <h5>CAS No. 643-79-8</h5>
+            </div>
           </div>
-          <div class="productTitle">
-            <h4>Ortho Phthalaldehyde</h4>
-            <h5>CAS No. 643-79-8</h5>
-          </div>
-        </div>
         </div>
 
         <div class="productListRow">
           <div
             class="productCard"
             onclick="window.open('product/4-Bromoanisole.html', '_blank');"
+             onMouseOver="this.style.backgroundColor='#30E3AF'" onMouseOut="this.style.backgroundColor='#42d1d8'"
           >
             <div class="imageContainer">
               <img
@@ -431,6 +444,7 @@
           <div
             class="productCard"
             onclick="window.open('product/4-methoxy-phenacyl-bromide.html', '_blank');"
+             onMouseOver="this.style.backgroundColor='#30E3AF'" onMouseOut="this.style.backgroundColor='#42d1d8'"
           >
             <div class="imageContainer">
               <img
@@ -446,27 +460,28 @@
             </div>
           </div>
           <div
-          class="productCard"
-          onclick="window.open('product/cyclopentane-carboxylic-acid.html', '_blank');"
-        >
-          <div class="imageContainer">
-            <img
-              src="./images/cyclopentane-carboxylic-acid.jpg"
-              alt="Norway"
-              class="image"
-            />
+            class="productCard"
+            onclick="window.open('product/cyclopentane-carboxylic-acid.html', '_blank');"
+             onMouseOver="this.style.backgroundColor='#30E3AF'" onMouseOut="this.style.backgroundColor='#42d1d8'"
+          >
+            <div class="imageContainer">
+              <img
+                src="./images/cyclopentane-carboxylic-acid.jpg"
+                alt="Norway"
+                class="image"
+              />
+            </div>
+            <div class="productTitle">
+              <h4>Cyclopentane Carboxylic Acid</h4>
+              <h5>CAS No. 3400-45-1</h5>
+            </div>
           </div>
-          <div class="productTitle">
-            <h4>Cyclopentane Carboxylic Acid</h4>
-            <h5>CAS No. 3400-45-1</h5>
-          </div>
-        </div>
-
         </div>
         <div class="productListRow">
           <div
             class="productCard"
             onclick="window.open('product/1-Bromoadamantane.html', '_blank');"
+             onMouseOver="this.style.backgroundColor='#30E3AF'" onMouseOut="this.style.backgroundColor='#42d1d8'"
           >
             <div class="imageContainer">
               <img
@@ -485,6 +500,7 @@
           <div
             class="productCard"
             onclick="window.open('product/1-Chloroadamantane.html', '_blank');"
+             onMouseOver="this.style.backgroundColor='#30E3AF'" onMouseOut="this.style.backgroundColor='#42d1d8'"
           >
             <div class="imageContainer">
               <img
@@ -502,6 +518,7 @@
           <div
             class="productCard"
             onclick="window.open('product/1-Adamantanol.html', '_blank');"
+             onMouseOver="this.style.backgroundColor='#30E3AF'" onMouseOut="this.style.backgroundColor='#42d1d8'"
           >
             <div class="imageContainer">
               <img
@@ -516,7 +533,6 @@
               <h5>CAS No. 768-95-6</h5>
             </div>
           </div>
-
         </div>
 
         <!-- <div class="productListRow">
@@ -524,6 +540,7 @@
           <div
           class="productCard"
           onclick="window.open('product/1-Hydroxyadamentanol.html', '_blank');"
+           onMouseOver="this.style.backgroundColor='#30E3AF'" onMouseOut="this.style.backgroundColor='#42d1d8'"
         >
           <div class="imageContainer">
             <img
@@ -538,7 +555,6 @@
           </div>
         </div>
         </div> -->
-
 
         <div class="disclaimerContainer">
           <div class="disclaimer">
@@ -713,11 +729,17 @@
     font-size: 35px;
   }
   .productCard {
+    cursor: pointer;
     background-color: #42d1d8;
     /* background-color: #2854b8; */
     /* background-color: #000080; */
     color: white;
+
   }
+  .productCardContainer :hover {
+ 
+  }
+
   .productListRow {
     width: 100%;
     margin-bottom: 60px;
@@ -741,6 +763,7 @@
     font-size: 12px;
     /* font-weight: 300; */
     padding-bottom: 5px;
+    width:100vw;
   }
   .disclaimerContainer {
     display: flex;
@@ -756,18 +779,18 @@
     background-color: white;
   }
 
-  .imageFlipXY{
+  .imageFlipXY {
     width: 200px;
     height: 200px;
-  -webkit-transform: scaleY(-1) scaleX(-1);
-  transform: scaleY(-1) scaleX(-1); 
+    -webkit-transform: scaleY(-1) scaleX(-1);
+    transform: scaleY(-1) scaleX(-1);
   }
 
-  .imageFlipX{
+  .imageFlipX {
     width: 200px;
     height: 200px;
-  -webkit-transform:scaleX(-1);
-  transform:scaleX(-1); 
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
   }
 
   /* #@#@#@#@##@#@#@#@##@#@#@#@##@#@#@#@##@#@#@#@##@#@#@#@##@#@#@#@##@#@#@#@# */
