alembic beaker icon update

--- a/about.html
+++ b/about.html
@@ -81,41 +81,41 @@
     <h2>Reaction Capabilities</h2>
     <p>
         <!-- Engineers at Freesia specialize in the following development processes- <br> -->
-        &#9879&nbspChlorination  <br>
-        &#9879&nbspCondensation  <br>
-        &#9879&nbspCyclization  <br>
-        &#9879&nbspBromination  <br>
-        &#9879&nbspFriedel-Craft  <br>
-        &#9879&nbspGrignard <br>
+        &#9879;&#65039;&nbspChlorination  <br>
+        &#9879;&#65039;&nbspCondensation  <br>
+        &#9879;&#65039;&nbspCyclization  <br>
+        &#9879;&#65039;&nbspBromination  <br>
+        &#9879;&#65039;&nbspFriedel-Craft  <br>
+        &#9879;&#65039;&nbspGrignard <br>
       </p>
 
       <h2>Manufacturing Plant</h2>
       <p>
       Located in Ambernath MIDC., near Mumbai city (the commercial capital of India), Freesia's 
-      plant is an <span>ISO 9001:2015 certified</span> establishment where production, 
+      plant is <span>ISO 9001:2015 & Kosher certified</span>, where production, 
       R&D, quality control and quality assurance   takes place.
     </p>
     <p>
           <h4>Stocked with:</h4>
-          &#9879&nbspProduction block holding 24 reactors with min. 0.5 KL & max. 5 KL capacity.<br>
-          &#9879&nbspGlass lined reactors with 0.25KL,1KL,3KL & 5KL capacities.<br>
-          &#9879&nbspDistillation columns (300MM in diameter and 5M in height).<br>
-          &#9879&nbspProcess development lab.  <br>
-          &#9879&nbspWarehouse for raw material storage.<br>
-          &#9879&nbspFire hydrant system, fire extinguishers & alarms, smoke alarms, etc.<br>
-          &#9879&nbspEffluent treatment facility (Primary Treatment).<br>
+          &#9879;&#65039;&nbspProduction block holding 24 reactors with min. 0.5 KL & max. 5 KL capacity.<br>
+          &#9879;&#65039;&nbspGlass lined reactors with 0.25KL,1KL,3KL & 5KL capacities.<br>
+          &#9879;&#65039;&nbspDistillation columns (300MM in diameter and 5M in height).<br>
+          &#9879;&#65039;&nbspProcess development lab.  <br>
+          &#9879;&#65039;&nbspWarehouse for raw material storage.<br>
+          &#9879;&#65039;&nbspFire hydrant system, fire extinguishers & alarms, smoke alarms, etc.<br>
+          &#9879;&#65039;&nbspEffluent treatment facility (Primary Treatment).<br>
         </p>
         <p>
             <h4>Utility equipments:</h4>
-            &#9879&nbspBoilers (600 kg capacity).		 <br>      	
-            &#9879&nbspThemopack (400 kcal).			  <br>          
-            &#9879&nbspHigh vacuum set up with water jet.	<br>		
-            &#9879&nbspHigh vacuum set up with steam jet.	 <br> 	
-            &#9879&nbspCooling Tower (350 TR capacity).<br>			
-            &#9879&nbspCooling Tower (250 TR capacity).	<br>	  	
-            &#9879&nbspChilling Plant (70 TR capacity.) <br> 	
-            &#9879&nbspChilling Plant (44 TR  capacity).	<br>
-            &#9879&nbspMulti stage scrubbing system.	<br>	    	
+            &#9879;&#65039;&nbspBoilers (600 kg capacity).		 <br>      	
+            &#9879;&#65039;&nbspThemopack (400 kcal).			  <br>          
+            &#9879;&#65039;&nbspHigh vacuum set up with water jet.	<br>		
+            &#9879;&#65039;&nbspHigh vacuum set up with steam jet.	 <br> 	
+            &#9879;&#65039;&nbspCooling Tower (350 TR capacity).<br>			
+            &#9879;&#65039;&nbspCooling Tower (250 TR capacity).	<br>	  	
+            &#9879;&#65039;&nbspChilling Plant (70 TR capacity.) <br> 	
+            &#9879;&#65039;&nbspChilling Plant (44 TR  capacity).	<br>
+            &#9879;&#65039;&nbspMulti stage scrubbing system.	<br>	    	
         </p>
 
         <p>
