--- a/contact.html
+++ b/contact.html
@@ -248,7 +248,7 @@
     <script
       async
       defer
-      src="https://maps.googleapis.com/maps/api/js?
+      src="https://maps.googleapis.com/maps/api/js?"
     ></script>
 
     <script>
