current tab highlight

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
           <!-- <a href="../index.html">Home</a> -->
           <a href="./index.html">Home</a>
           <a href="./index.html#productList">Products</a>
-          <a href="#">About</a>
+          <a style="color:#2854b8;" href="#">About</a>
           <a href="./contact.html">Contact</a>
         </div>
       </div>
