--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
           <a href="./index.html">Home</a>
           <a href="./index.html#productList">Products</a>
           <a href="./about.html">About</a>
-          <a href="#">Contact</a>
+          <a style="color:#2854b8;" href="#">Contact</a>
         </div>
       </div>
     </div>
@@ -92,7 +92,7 @@
             method="POST"
             id="enquiryForm"
             name="enquiryForm"
-            action="https://script.google.com/macros/s//exec"
+            action="https://script.google.com/macros/s/c"
             data-email="freesia.chemicals37@gmail.com"
           >
             <h2 class="enquiry">Submit Enquiry</h2>
