--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <h1><a href="index.html">Freesia</a></h1>
 
         <div class="headerOptions">
-          <a href="index.html">Home</a>
+          <a style="color:#2854b8;" href="index.html">Home</a>
           <a href="index.html#productList">Products</a>
           <a href="./about.html">About</a>
           <a href="./contact.html">Contact</a>
@@ -72,7 +72,7 @@
         <div class="greyLine"></div>
       </div>
 
-      <a href="index.html">Home</a>
+      <a  href="index.html">Home</a>
       <a href="index.html#productListHook" onclick="closeNav()">Products</a>
       <a href="./about.html">About</a>
       <a href="./contact.html">Contact</a>
