contact email change

--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script
         async
-        src="https://www.googletagmanager.com/gtag/js?id=UA-147321955-1"
+        src=""
       ></script>
       <script>
         window.dataLayer = window.dataLayer || [];
@@ -81,8 +81,8 @@
         <p class="email">
           <label>Email:</label>
 
-          <a href="mailto:freesia.chemicals37@gmail.com?">
-            freesia.chemicals37@gmail.com
+          <a href="mailto:arun@freesiachem.in">
+            arun@freesiachem.in
           </a>
         </p>
 
@@ -92,7 +92,7 @@
             method="POST"
             id="enquiryForm"
             name="enquiryForm"
-            action="https://script.google.com/macros/s/c"
+            action=""
             data-email="freesia.chemicals37@gmail.com"
           >
             <h2 class="enquiry">Submit Enquiry</h2>
@@ -327,7 +327,7 @@ function closeNav() {
     <script
       data-cfasync="false"
       type="text/javascript"
-      src="../form-submission-handler.js"
+      src="../"
     ></script>
     <div class="blueLine"></div>
   </body>
